--- a/static/css/style.css
+++ b/static/css/style.css
@@ -20,6 +20,7 @@
 @import "pages/review_list.css";
 @import "pages/review_create.css";
 @import "pages/review_detail.css";
+@import "pages/create_sister.css";
 @import "pages/login.css";
 @import "pages/signup.css";
 @import "pages/certificate.css";
