--- a/templates/foreign/create_sister.html
+++ b/templates/foreign/create_sister.html
@@ -7,19 +7,19 @@
             <h3>{{univ.away_name}}</h3>
             <a class="country-btn dark-button" href="{% url "country:country_wiki" univ.country.pk%}">{{univ.country}}</a>
         </div>
-        <button class="btn btn-sm btn-border btn-primary" onclick="location.href='{% url "foreign:create_sister" univ.pk %}'">학교 추가</button>
+        <button type="submit" class="blue-button create-btn md-btn" form="sister_add">저장하기</button>
     </div>
-    <hr>
-    <div>
-        학교명
-        <form  action ="" method="POST"  enctype="multipart/form-data">
+    <hr class="mb25-hr">
+    <div class = "create-sister-form d-flex align-items-center justify-content-around">
+        <span class="">대학선택</span>
+        <form  action ="" method="POST"  enctype="multipart/form-data" id="sister_add">
         {% csrf_token %}
         <select name="sister">
             {% for domestic_univ in domestic_univs %}
                 <option>{{ domestic_univ.home_name }}</option>
             {% endfor %}
         </select>
-        <button type="submit" class="btn btn-outline-danger"> 추가 </button>
+        
         </form>
     </div>
 
