TEST-85 Design: 국내 대학 QnA 디테일페이지

--- a/static/css/components/post.css
+++ b/static/css/components/post.css
@@ -1,16 +1,37 @@
+.post-title,
+.post-author,
+.post-content,
+.comment-content {
+  color: var(--d-gray);
+}
+
+.post-date,
+.comment-date {
+  color: var(--m-gray);
+}
+
+.new-comment-input,
+.new-undercomment-input,
+.edit-comment-input {
+  padding-left: 14px;
+  border-radius: 10px;
+  border-style: none;
+}
+
 .post-title {
   font-size: 20px;
   margin-bottom: 10px;
+  font-weight: 500;
 }
 
 .post-author {
   font-size: 14px;
-  font-weight: 500;
+  font-weight: 700;
+  margin-right: 10px;
 }
 
 .post-date {
   font-size: 12px;
-  margin-left: 15px;
 }
 
 .post-content {
@@ -19,9 +40,16 @@
   margin-bottom: 25px;
 }
 
+.post-button {
+  margin-left: 10px;
+}
+
+.comment-container {
+  margin-bottom: 26px;
+}
+
 .comment-date {
   font-size: 12px;
-  margin-left: 10px;
 }
 
 .comment-content {
@@ -29,42 +57,25 @@
   margin-top: 11px;
 }
 
-.post-date,
-.comment-date {
-  color: var(--m-gray);
-}
-
-.post-title,
-.post-author,
-.post-content,
-.comment-content {
-  color: var(--d-gray);
-}
-
-.post-hr {
-  margin: none !important;
-}
-
-.comment-container {
-  margin-top: 26px;
-}
-
 .undercomment-container {
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.post-button {
-  margin-left: 10px;
-}
-
-.new-comment {
+/* .new-comment {
   margin-top: 25px;
-}
+} */
 
 .new-comment-input {
-  border-radius: 10px;
-  padding-left: 14px;
-  border-style: none;
-  width: 892px;
   height: 35px;
+}
+
+.edit-comment-input {
+  width: 990px;
+  height: 35px;
+  margin-top: 16px;
+}
+
+.new-undercomment-input {
+  font-size: 14px;
+  height: 34px;
 }
