--- a/templates/domestic/question_list.html
+++ b/templates/domestic/question_list.html
@@ -38,8 +38,8 @@
         <table>
             <tr align='center'>
                 <th width='50'>번호</th>
-                <th width='600' >제목</th>
-                <th>날짜</th>
+                <th width='880' >제목</th>
+                <th width='80'>날짜</th>
             </tr>
         </table>
         <div class='text-center m-5'>
