--- a/templates/domestic/question_form.html
+++ b/templates/domestic/question_form.html
@@ -10,8 +10,8 @@
     <hr>
     <form id="frm" method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        <p><input class="question-title" name="question_title" placeholder="제목을 입력하세요." required></p>
-        <p><textarea class="question-content" name="question_content" placeholder="내용을 입력하세요." required></textarea></p>
+        <p><input class="question-title" name="question_title" placeholder="제목을 입력하세요." required {% if question.question_title %} value="{{ question.question_title }}" {% endif %}></p>
+        <p><textarea class="question-content" name="question_content" placeholder="내용을 입력하세요." required >{{ question.question_content }}</textarea></p>
     </form>
 </div>
 {% endblock %}
