--- a/templates/domestic/question_detail.html
+++ b/templates/domestic/question_detail.html
@@ -31,7 +31,7 @@
                 {%for comment in comments %}
                 <div class="comment_{{comment.id}} comment-container">
                     <div class=" d-flex justify-content-between">
-                        <div>
+                        <div class="d-flex align-items-center">
                             <span class="post-author">{{ comment.comment_author.nickname }}</span>
                             <span class="comment-date">{{ comment.created_at|date:"Y.m.d" }} </span>
                         </div>
@@ -40,10 +40,12 @@
                             <button class="light-button create-btn s-btn update " onclick="EditComment('{{ comment.id }}' ,'{{ comment.comment_content }}')">수정</button>
                             <button class="light-button create-btn s-btn post-button delete " onclick="onClickDelete('{{ comment.id }}' )">삭제</button>
                             {%endif%}
+                            {% if is_enrolled == 'True' %}
                             <button class="light-button create-btn s-btn post-button" id='undercomment' onclick="undercommentPlus('{{ comment.id }}')">댓글</button><br/>
+                            {% endif %}
                         </div>
                     </div>
-                    <span class="comment-content">{{ comment.comment_content }}</span>
+                    <p class="comment-content">{{ comment.comment_content }}</p>
                 </div>
                 <div class="undercomment_list_{{ comment.pk }}">
                     {% for undercomment in undercomments  %}
@@ -51,7 +53,7 @@
                         <div id="undercomment_{{ undercomment.pk }}">
                             <div class="undercomment-container d-flex justify-content-between">
                                 <div>
-                                    <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
+                                    <img class="undercomment-icon" src="/static/css/img/undercomment.png" alt="대댓글">
                                     <span class="post-author">{{ undercomment.comment_author.nickname }}</span>
                                     <span class="comment-content">{{ undercomment.comment_content }}</span>
                                 </div>
@@ -69,10 +71,12 @@
                 <div class="undercomment-container undercomment_{{ comment.pk }} d-flex align-items-center" ></div>
                 {% endfor %}
             </div>
+            {% if is_enrolled == 'True' %}
             <form class="new-comment d-flex align-items-center" action="./comment_create/" method="POST">
                 <input class="new-comment-input flex-grow-1" type="text" name="comment_content" id="comment_{{ question.pk }}" placeholder='댓글달기...' style="width: 80%;"/>
                 <span class="blue-button create-btn s-btn post-button submit" onclick="onClickComment('{{ user.is_authenticated }}', '{{ question.pk }}', document.querySelector('#comment_{{ question.pk }}').value )">등록</span>
             </form>
+            {% endif %}
         </div>
     </div>
 {% endblock %}
@@ -205,7 +209,7 @@
     const undercommentPlus = (comment_id) => {
         const element = document.querySelector(`.undercomment_${comment_id}`);
         element.innerHTML = `
-            <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
+            <img src="/static/css/img/undercomment.png" alt="대댓글">
             <span class="post-author">{{ request.user.nickname }}</span>
             <input class="new-undercomment-input flex-grow-1" type="text" id="new-undercomment" placeholder="댓글 달기..."/>
             <button class="blue-button create-btn s-btn post-button" onclick="onClickUnderComment('{{ is_authenticated }}', ${comment_id}, document.querySelector('#new-undercomment').value)">등록</button>
@@ -232,7 +236,7 @@
             <div id="undercomment_${undercomment_id}">
                 <div class="undercomment-container d-flex justify-content-between">
                     <div>
-                        <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
+                        <img src="/static/css/img/undercomment.png" alt="대댓글">
                         <span class="post-author">${undercomment_author}</span>
                         <span class="comment-content">${undercomment_content}</span>
                     </div>
@@ -253,7 +257,7 @@
         const originHTML = element.innerHTML;
         element.innerHTML = `
         <div class="undercomment-container d-flex align-items-center">
-            <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
+            <img src="/static/css/img/undercomment.png" alt="대댓글">
             <span class="post-author">{{ request.user.nickname }}</span>
             <input class="new-undercomment-input flex-grow-1" type="text" id="edit-undercomment" value=${undercomment_content} />
             <button class="blue-button create-btn s-btn post-button" onclick="onClickEditUnder('${comment_id}', '${undercomment_id}', document.querySelector('#edit-undercomment').value)">저장</button>
@@ -277,7 +281,7 @@
         element.innerHTML = `
             <div class="undercomment-container d-flex justify-content-between">
                 <div>
-                    <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
+                    <img src="/static/css/img/undercomment.png" alt="대댓글">
                     <span class="post-author">{{ request.user.nickname }}</span>
                     <span class="comment-content flex-grow-1">${undercomment_content}</span>
                 </div>
