TEST-8 Style: 돋보기 추가/review-detail 수정

--- a/static/css/pages/univ_search.css
+++ b/static/css/pages/univ_search.css
@@ -56,5 +56,7 @@
 .lsearch-icon {
   position: absolute;
   font-size: 12px;
-  text-align: start;
+  right: 1%;
+  height: 100%;
+  color: var(--d-gray);
 }
