--- a/templates/foreign/review_detail.html
+++ b/templates/foreign/review_detail.html
@@ -247,7 +247,7 @@
                 <div>
                     <img src="/static/css/img/undercomment.png" style="margin-right:10px;" alt="대댓글">
                     <span class="post-author">${recomment_author}</span>
-                    <span style="margin-left: 30px;">${recomment_content}</span>
+                    <span class="comment-content"">${recomment_content}</span>
                 </div>
                 <div>
                     <button class="s-btn light-button update" onclick="editReComment('${comment_id}', '${recomment_id}','${recomment_content}')">수정</button>
